# dms-core

./: .env.example  AGENTS.md  README.md  SDK_INTERFACE.md  SRS.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.minio.yml  docker-compose.postgres.yml
.github/workflows/: python-publish.yml
dms/: __init__.py
dms/domain/: interfaces.py  models.py
dms/infrastructure/: __init__.py
dms/sdk/: __init__.py  _reconciliation.py  _upload.py  assembly.py  async_bridge.py  client.py  configuration.py  core_compat.py  documents.py  environment.py  error_translation.py  errors.py  (+10 more)
docs/: SDK_INTERFACE.md  SRS.md  api.md  config.md  examples.md  messaging.md  prd.md  security.md  srs.md  test.md
test_dms/: sdk_test_support.py  test_independent_review_regressions.py  test_infrastructure_adapters.py  test_integration_adapters.py  test_p0_sdk_evolution.py  test_p1_sdk_evolution.py  test_p2_sdk_evolution.py  test_refactoring_boundaries.py  test_release_1.py  test_release_2.py  test_release_3.py  test_release_4.py  test_release_5.py  test_sdk_behavior.py  test_sdk_client_factory.py  test_sdk_configuration_and_metadata_policy.py  test_sdk_deletion.py  test_sdk_feedback_http_async_cursor.py  test_sdk_idempotency.py  test_sdk_idempotency_persistence.py  test_sdk_lifecycle_and_conflicts.py  test_sdk_metadata.py  test_sdk_pagination.py  test_sdk_public_contract.py  test_sdk_reconciliation.py  test_sdk_reconciliation_core.py  test_sdk_requirement_feedback.py  test_sdk_stream_upload.py  test_sdk_stream_upload_contract.py  test_sdk_typed_runtime_factory.py
wiki/: SCHEMA.md  index.md  log.md
(+38 files in other folders)
