[project]
name = "dms"
version = "0.1.0"
description = "A Python package for DocMesh, a document management system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]

[tool.setuptools.packages.find]
include = ["dms*"]
exclude = ["test_dms*"]
