[project]
name = "dms"
version = "0.1.0"
description = "A Python package for DocMesh, a document management system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docmesh-py-core",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]

[tool.setuptools.packages.find]
include = ["dms*"]
exclude = ["test_dms*"]

[tool.uv.sources]
docmesh-py-core = { git = "https://github.com/kyundae-kim/docmesh-py-core.git", rev = "v0.1.4" }
