[project]
name = "dms"
version = "0.3.0"
description = "A Python package for DocMesh, a document management system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docmesh-py-core",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]

[tool.setuptools.packages.find]
include = ["dms*"]
exclude = ["test_dms*"]

[tool.pytest.ini_options]
testpaths = ["test_dms"]
addopts = ["-ra"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = ["integration: mark test as integration test (requires external services)"]
anyio_mode = "auto"

[tool.uv.sources]
docmesh-py-core = { git = "https://github.com/kyundae-kim/docmesh-py-core.git", rev = "v0.3.0" }
